refactor(*): remove google dependency