@@ -18,7 +18,6 @@
  */
 package org.constellation.sos.component;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Set;
 import org.constellation.ws.ConstellationOGCModule;
 
@@ -39,7 +38,7 @@ public class SOSConstellationOGCModule implements ConstellationOGCModule {
 
     @Override
     public Set<String> getVersions() {
-        return ImmutableSet.of("1.0.0", "2.0.0");
+        return Set.of("1.0.0", "2.0.0");
     }
 
 }
