@@ -18,7 +18,6 @@
  */
 package org.constellation.thesaurus.component;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Set;
 import org.constellation.ws.ConstellationOGCModule;
 
@@ -39,6 +38,6 @@ public class THWConstellationOGCModule implements ConstellationOGCModule {
 
     @Override
     public Set<String> getVersions() {
-        return ImmutableSet.of("1.0.0");
+        return Set.of("1.0.0");
     }
 }
